min / max nearBallRadius introduced instead of eta